k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nextjs-app
  namespace: production

spec:
  replicas: 2

  selector:
    matchLabels:
      app: nextjs-app

  template:
    metadata:
      labels:
        app: nextjs-app

    spec:
      containers:
        - name: nextjs-app
          image: yourdockerhub/nextjs-app:latest

          ports:
            - containerPort: 3000
