k8s/base/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: nextjs-service
  namespace: production

spec:
  selector:
    app: nextjs-app

  ports:
    - port: 80
      targetPort: 3000

  type: ClusterIP
